[tool.poetry]
name = "obs-waykey"
version = "0.1.0"
description = "OBS global shortcuts workaround for wayland sing websocket"
authors = ["PolyCat <polycat@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
obsws-python = "^1.7.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
obs-waykey = "obs_waykey:ignite"